Add markup and styling form form and about section

--- a/index.html
+++ b/index.html
@@ -156,77 +156,85 @@
 </div>
 </div>
 </section>
-    <section class="contact">
-        <div class="about">
-            <h2 class="about-1">About<br>Myself</h2>
-            <h4 class="about-2">Hello I’m a software developer! I can help you build a<br> product , feature or website Look through some of my<br> work and experience! If you like what you see and have<br> a project you need coded, don’t hestiate to contact me.</h4>
-        <h2 class="about-3">LET'S CONNECT</h2>
-        <ul class="about-4">
-            <li><a><i class="fa-brands fa-twitter"></i></a></li>
-            <li><a><i class="fa-brands fa-linkedin"></i></a></li>
-            <li><a><i class="fa-sharp fa-solid fa-m"></i></a></li>
-            <li><a><i class="fa-regular fa-hand-peace"></i></a></li>
-            <li><a><i class="fa-brands fa-github"></i></a></li>
-        </ul>
-        <Button type="button" class="button-2">Get My Resume</Button>
-        </div>
-        <div class="language">
-            <div>
-                <ul class="lang-1">
-                    <li>Language</li>
-                    <li><a><i class="fa-sharp fa-solid fa-chevron-down"></i></a></li>
-                </ul>
+<div class="mt-4 p-5 bg-white text-dark rounded desktop">
+  <div class ="text">
+    <h1>About <br>Myself</h1>
+  <p>I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
+  </p>
+  <h2 class="h4 text-primary">LET'S CONNECT</h2>
+    <ul class="list-group list-group-horizontal">
+      <li class="list-group-item"><a><i class="fa-brands fa-twitter"></i></a></li>
+      <li class="list-group-item"><a><i class="fa-brands fa-linkedin"></i></a></li>
+      <li class="list-group-item"><a><i class="fa-sharp fa-solid fa-m"></i></a></li>
+      <li class="list-group-item"><a><i class="fa-regular fa-hand-peace"></i></a></li>
+      <li class="list-group-item"><a><i class="fa-brands fa-github"></i></a></li>
+    </ul><br>
+    <button type="button" class="btn btn-primary bg-white text-dark">Get my Resume</button>
+  </div>
+
+    <div class="language">
+      <div class="disp">
+        <h4>language</h2>
+         <a><i class="fa-sharp fa-solid fa-chevron-down"></i></a>
+      </div>
+      <div>
+          <ul class="lang-2">
+              <div class="script badge bg-secondary">
+                  <div>
+                    <img src="Assets/img/Ellipse.jpg">
+                  </div>
+                  <div class="java">JavaScript</div>
+              </div>
+              <div class="script badge bg-secondary">
+                <div>
+                  <img src="Assets/img/Ellipse-1.jpg">
+                </div>
+                <div class="java">CSS</div>
             </div>
-            <div>
-                <ul class="lang-2">
-                    <div class="script">
-                        <li><img src="Assets/img/Ellipse.jpg"></li>
-                        <li class="java">JavaScript</li>
-                    </div>
-                    <div class="html">
-                        <li><img src="Assets/img/Ellipse-1.jpg"></li>
-                        <li class="java">HTML</li>
-                    </div>
-                    <div class="css">
-                        <li><img src="Assets/img/Ellipse-2.jpg"></li>
-                        <li class="java">CSS</li>
-                    </div>
-                </ul>
-            </div>
-            <div>
-                <ul class="frame">
-                    <li class="lan">Frameworks</li>
-                    <li><a><i class="fa-solid fa-chevron-right"></i></a></li>
-                </ul>
-            </div>
-            <div>
-                <ul class="frame">
-                    <li class="lan">Skills</li>
-                    <li><a><i class="fa-solid fa-chevron-right"></i></a></li>
-                </ul>
-            </div>
-        </div>
-    </section>
-    <section>
-        <form action="https://formspree.io/f/mqkjgqke" method="post">
-        <div class="for-con">
-        <h2>Contact me</h2>
-        <h4>If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it </h4>
-        <div class="contact-form">
-        <input type="text" name="name" id="name" class="input-fields" maxlength="30" placeholder="Enter name here..." required>
-        <input type="email" name="email" id="email" class="input-fields" placeholder="Enter email..." required>
-        <textarea type="text" name="message" placeholder="Write your message here" maxlength="500" placeholder="Type message here..." required></textarea>
-        </div>
-        <div class="end">
-        <button type="submit" class="button-2">Get It touch</button>
-        </div>
-        </div>
-        </form>
-    </section>
+            <div class="script badge bg-secondary">
+              <div>
+                <img src="Assets/img/Ellipse-2.jpg">
+              </div>
+              <div class="java">html</div>
+          </div>
+              
+          </ul>
+      </div>
+      <div class="disp">
+        <h4>Frameworks</h2>
+         <a><i class="fa-sharp fa-solid fa-chevron-down"></i></a>
+      </div>
+      <div class="disp">
+        <h4>Skils</h2>
+         <a><i class="fa-sharp fa-solid fa-chevron-down"></i></a>
+      </div>
+  </div>
+</div>
+
+<section class="form-section">
+    <div class="about-me form-details">
+      <h1>Contact Me</h1>
+    <p>I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
+    </p>
+    </div>
+    <form class="form-details" action="https://formspree.io/f/mqkjgqke" method="post">
+      <div class="mb-3">
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="DonaldAkite">
+      </div>
+      <div class="mb-3">
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+      </div>
+      <div class="mb-3">
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+      </div>
+      <button type="button" class="btn btn-primary bg-white text-dark">Get in touch</button>
+
+    </form>
+</section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <scripps://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
