--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a class="navbar-brand" href="#">My Logo</a>
         <ul class="nav nav-pills">
           <li class="nav-item">
-            <a class="nav-link" href="#scrollspyHeading1">Portfolio</a>
+            <a class="nav-link" href="#scrollspyHeading1">Portfollio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#scrollspyHeading2">About</a>
