Add bootstrap features

--- a/index.html
+++ b/index.html
@@ -12,20 +12,6 @@
     <script src="https://kit.fontawesome.com/2af886883b.js" crossorigin="anonymous"></script>
 </head>
   <body>
-    <nav id="navbar-example2" class="navbar navbar-light bg-light px-3">
-        <a class="navbar-brand" href="#">My Logo</a>
-        <ul class="nav nav-pills">
-          <li class="nav-item">
-            <a class="nav-link" href="#scrollspyHeading1">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#scrollspyHeading2">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#scrollspyHeading2">Contact</a>
-          </li>
-        </ul>
-      </nav>
     <section class="heading">
         <div>
             <h1>I'm Frankz<br> Glad to see you!</h1>
@@ -43,49 +29,46 @@
         </ul>
         <br><br><br><br>
     </section>
-    <section>
-    <div class="card mb-3" style="max-width: 1000px;">
-        <div class="row g-0">
-          <div class="col-md-4">
-            <img src="Assets/img/snapshot-3.png" class="img-fluid rounded-start" alt="Card image">
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title">Tonic</h5>
-              <ul class="items">
-                <li class="list3">CANOPY</li>
-                <li class="list2">Back End Dev</li>
-                <li class="list2">2015</li>
-            </ul>
-              <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
-              <ul class="items">
-                <li class="list">html</li>
-                <li class="list">css</li>
-                <li class="list">javaScript</li>
-            </ul>
-            <div>
-                <button type="button" class="button-1">See Project</button>
+    <section class="container">
+      <div class="card mb-3">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="Assets/img/snapshot-3.png" class="img-fluid rounded-start" alt="Card image">
             </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Tonic</h5>
+                <ul class="items">
+                  <li class="list3">CANOPY</li>
+                  <li class="list2">Back End Dev</li>
+                  <li class="list2">2015</li>
+              </ul>
+                <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+                <ul class="items">
+                  <li class="list">html</li>
+                  <li class="list">css</li>
+                  <li class="list">javaScript</li>
+              </ul>
+              <div>
+                <button class="btn btn-primary" type="submit">See Project</button>
+              </div>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
+</section>
 <section class="container">
-    <div class="card mb-3" style="max-width: 1000px;">
+    <div class="card mb-3">
         <div class="row g-0">
-          <div class="col-md-4">
-            <img src="Assets/img/Snapshoot-1.jpg" class="img-fluid rounded-start" alt="Card image">
-          </div>
           <div class="col-md-8">
             <div class="card-body">
-              <h5 class="card-title">Facebook 360</h5>
+              <h5 class="card-title">Multi-Post Stories</h5>
               <ul class="items">
-                <li class="list3">CANOPY</li>
+                <li class="list3">FACEBOOK</li>
                 <li class="list2">Full Stack Dev</li>
                 <li class="list2">2015</li>
             </ul>
-              <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+              <p class="card-text">Experimental content creation feature that allows users to add to an existing story over the course of a day without spamming their friends.</p>
               <ul class="items">
                 <li class="list">html</li>
                 <li class="list">Ruby on rails</li>
@@ -93,15 +76,18 @@
                 <li class="list">javaScript</li>
             </ul>
             <div>
-                <button type="button" class="button-1">See Project</button>
+              <button class="btn btn-primary" type="submit">See Project</button>
             </div>
             </div>
+          </div>
+          <div class="col-md-4">
+            <img src="Assets/img/snapshot-2.jpg" class="img-fluid rounded-start" alt="Card image">
           </div>
         </div>
       </div>
 </section>
     <section class="container">
-        <div class="card mb-3" style="max-width: 1000px;">
+        <div class="card mb-3">
             <div class="row g-0">
               <div class="col-md-4">
                 <img src="Assets/img/Snapshoot-1.jpg" class="img-fluid rounded-start" alt="Card image">
@@ -110,11 +96,11 @@
                 <div class="card-body">
                   <h5 class="card-title">Facebook 360</h5>
                   <ul class="items">
-                    <li class="list3">CANOPY</li>
+                    <li class="list3">FACEBOOK</li>
                     <li class="list2">Full Stack Dev</li>
                     <li class="list2">2015</li>
                 </ul>
-                  <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+                  <p class="card-text">Exploring the future of media in Facebook's first Virtual Reality app; a place to discover and enjoy 360 photos and videos on Gear VR.</p>
                   <ul class="items">
                     <li class="list">html</li>
                     <li class="list">Ruby on rails</li>
@@ -122,7 +108,7 @@
                     <li class="list">javaScript</li>
                 </ul>
                 <div>
-                    <button type="button" class="button-1">See Project</button>
+                  <button class="btn btn-primary" type="submit">See Project</button>
                 </div>
                 </div>
               </div>
@@ -130,38 +116,40 @@
           </div>
 </section>
 <section class="container">
-    <div>
-    <img  class="image" src="Assets/img/snapshot-4.jpg">
-    <div class="float">
-    <ul class="">
-    <li class="tonic">Uber Navigation</li><br>
-    </ul>
-    <div>
-    <ul class="items">
-        <li class="canopy">Uber</li>
-        <li class="list">Lead Developer</li>
-        <li class="list1">2018</li>
-    </ul>
+  <div class="card mb-3">
+      <div class="row g-0">
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title">Uber Navigation</h5>
+            <ul class="items">
+              <li class="list3">Uber</li>
+              <li class="list2">Lead Developer</li>
+              <li class="list2">2018</li>
+          </ul>
+            <p class="card-text">A smart assistant to make driving more safe, efficient, and fun by unlocking your most expensive computer: your car.</p>
+            <ul class="items">
+              <li class="list">html</li>
+              <li class="list">Ruby on rails</li>
+              <li class="list">css</li>
+              <li class="list">javaScript</li>
+          </ul>
+          <div>
+            <button class="btn btn-primary" type="submit">See Project</button>
+          </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <img src="Assets/img/snapshot-4.jpg" class="img-fluid rounded-start" alt="Card image">
+        </div>
+      </div>
     </div>
-    </div>
-    <p class="para">A smart assistant to make driving more safe, efficient, and fun by unlocking your most expensive computer: your car.</p>
-    <ul class="tools">
-    <li class="list2">html</li>
-    <li class="list2">Ruby on rails</li>
-    <li class="list2">css</li>
-    <li class="list2">javaScript</li>
-</ul>
-<div>
-    <button type="button" class="button-1">See Project</button>
-</div>
-</div>
 </section>
-    <section class="contact">
-        <div class="about">
-            <h2 class="about-1">About<br>Myself</h2>
-            <h4 class="about-2">Hello I’m a software developer! I can help you build a<br> product , feature or website Look through some of my<br> work and experience! If you like what you see and have<br> a project you need coded, don’t hestiate to contact me.</h4>
-        <h2 class="about-3">LET'S CONNECT</h2>
-        <ul class="about-4">
+    <section>
+        <div>
+            <h2>About<br>Myself</h2>
+            <h4>Hello I’m a software developer! I can help you build a<br> product , feature or website Look through some of my<br> work and experience! If you like what you see and have<br> a project you need coded, don’t hestiate to contact me.</h4>
+        <h2>LET'S CONNECT</h2>
+        <ul>
             <li><a><i class="fa-brands fa-twitter"></i></a></li>
             <li><a><i class="fa-brands fa-linkedin"></i></a></li>
             <li><a><i class="fa-sharp fa-solid fa-m"></i></a></li>
@@ -206,22 +194,6 @@
                 </ul>
             </div>
         </div>
-    </section>
-    <section>
-        <form action="https://formspree.io/f/mqkjgqke" method="post">
-        <div class="for-con">
-        <h2>Contact me</h2>
-        <h4>If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it </h4>
-        <div class="contact-form">
-        <input type="text" name="name" id="name" class="input-fields" maxlength="30" placeholder="Enter name here..." required>
-        <input type="email" name="email" id="email" class="input-fields" placeholder="Enter email..." required>
-        <textarea type="text" name="message" placeholder="Write your message here" maxlength="500" placeholder="Type message here..." required></textarea>
-        </div>
-        <div class="end">
-        <button type="submit" class="button-2">Get It touch</button>
-        </div>
-        </div>
-        </form>
     </section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
